[package]
name = "icfp2021"
version = "0.1.0"
authors = ["Hayato Ito <hayatoito@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.41"
chrono = "0.4.19"
env_logger = "0.8.4"
log = "0.4.14"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0.126", features = ["derive"] }
structopt = "0.3.21"
serde_json = "1.0.64"
regex = "1.5.4"
warp = "0.3.1"
tokio = "1.7.1"
webbrowser = "0.5.5"
rand = "0.8.4"
rayon = "1.5.1"
